--- a/src/app/games/grade-capas-games/grade-capas-games.component.html
+++ b/src/app/games/grade-capas-games/grade-capas-games.component.html
@@ -2,11 +2,12 @@
 
 <div class="row">
     <div *ngFor="let game of games" class="col-4">
-        <a [routerLink]="['/games', game.id]"></a>
-        <app-cartao>
-            <app-game [url]="game.url" [descricao]="game.description"></app-game>
-            <i aria-hidden="true" class="fa fa-heart-o fa-1x mr-2">{{ game.likes }}</i>
-            <i aria-hidden="true" class="fa fa-comment-o fa-1x mr-2 ml-2">{{ game.comments }}</i>
-        </app-cartao>
+        <a [routerLink]="['/games', game.id]">
+            <app-cartao>
+                <app-game [url]="game.url" [descricao]="game.description"></app-game>
+                <i aria-hidden="true" class="fa fa-heart-o fa-1x mr-2">{{ game.likes }}</i>
+                <i aria-hidden="true" class="fa fa-comment-o fa-1x mr-2 ml-2">{{ game.comments }}</i>
+            </app-cartao>
+        </a>
     </div>
 </div>
