Upload de imagem

--- a/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/src/app/componentes/cabecalho/cabecalho.component.html
@@ -1,6 +1,15 @@
 <header class="sticky-top">
     <nav class="navbar navbar-light bg-white">
-        <a class="navbar-brand">Leo Games Store</a>
+        <a class="navbar-brand"><i class="fa fa-bars mr-2" (click)="menu.abreMenu()" (keyup.space)="menu.abreMenu()"></i>Leo Games Store</a>
+
+        <app-menu #menu>
+            <ul class="list-unstyled">
+                <li>
+                    <a [routerLink]="['games', 'novo']">Novo Game</a>
+                </li>
+            </ul>
+        </app-menu>
+
         <div *ngIf="user$ | async as user">
             <div *ngIf="user.name; else login">
                 <i class="fa fa-user-circle mr-1"></i>
